# dispatcher

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
dispatcher/: Dockerfile  Dockerfile.celery  Dockerfile.fastapi  backend.py  main.py  models.py  py.typed  server.py  worker.py
mysql/: Dockerfile  dump.sql
tests/: test_worker.py
