[tool.poetry]
name = "dispatcher"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.85.1"}
celery = "^5.2.7"
flower = "^1.2.0"
sqlalchemy = "^1.4.42"
pymysql = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
pylint = "^2.15.5"
isort = "^5.10.1"
mypy = "^0.982"
bandit = "^1.7.4"
radon = "^5.1.0"
pre-commit = "^2.20.0"
coverage = "^6.5.0"
tox = "^3.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
